fixed misspell in doc

--- a/doc/main.tex
+++ b/doc/main.tex
@@ -76,7 +76,7 @@ Chromozom zde reprezentuje zakódovaná pravidla do formy, ve které je možná 
     \item $w$ je váha daného pravidla.
 \end{itemize}
 
-Hodnoty $v_i$ a $w$ jsou pouze jednoduše dekódovány z chromozomu pomocí pole \emph{names}, které mapuje čísla (indexi) na již konkrétní jména hodnoty, které mohou být reprezentovány slovy (např.: \emph{low}, \emph{medium}, \emph{high}). To ke kterým fuzzy proměnným mají být tyto hodnoty přiřazeny je poté zakódováno přímo v pozici kde se pravidlo v poli nachází. Pro lepší porozumění je k dispozici formálnější popis v algoritmu \ref{lst:rule_creation}.
+Hodnoty $v_i$ a $w$ jsou pouze jednoduše dekódovány z chromozomu pomocí pole \emph{names}, které mapuje čísla (indexi) na již konkrétní jména, které mohou být reprezentovány slovy (např.: \emph{low}, \emph{medium}, \emph{high}). To ke kterým fuzzy proměnným mají být tyto hodnoty přiřazeny je poté zakódováno přímo v pozici kde se pravidlo v poli nachází. Pro lepší porozumění je k dispozici formálnější popis v algoritmu \ref{lst:rule_creation}.
 
 \begin{listing}[h]
 \begin{minted}[frame=lines, breaklines]{python}
